"just commit this shits"

--- a/polls/static/polls/style.css
+++ b/polls/static/polls/style.css
@@ -3,7 +3,7 @@ li a {
 }
 
 body {
-    background-color: #FF717E;
-    background-image: url("images/bg.gif") no-repeat right bottom;
+    background-color: #FF9999;
+    background-image: url("../images/bg.gif") no-repeat right bottom;
 
 }
