--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -5,8 +5,8 @@
 <form action="{% url 'polls:vote' poll.id %}" method="post">
 {% csrf_token %}
 {% for choice in poll.choice_set.all %}
-    <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id" }}
+    <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}"/>
     <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br />
-{% end for %}
+{% endfor %}
 <input type="submit" value="Vote" />
 </form>
